--- a/index.html
+++ b/index.html
@@ -5,10 +5,6 @@
       NO GAURAANSH
     </h1>
     <br>
-    <p> NO GAURAANSH
-
-you have to understand that this no means A NO. Did you forget 7th august? when everybody scored WAYYY better than you? WHY THE DO YOU WANT TO PUSH YOURSELF DOWN? Everyone did good EXCEPT YOU. 
-      <br> <b>THIS IS BLOCKED FOR A VERY BIG REASON and YOU CANNOT FORGET THAT</b></p>
-    
+    <p> <b>THIS IS BLOCKED FOR A VERY BIG REASON and there is nothing bad with that reason.</b></p>
   </body>
 </html>
